--- a/style.css
+++ b/style.css
@@ -89,7 +89,10 @@
   width: 3rem;
   height: 2px;
   background-color: #333;
+  position: absolute;
   display: inline-block;
+  left: 30px;
+  top: 55px;
 }
 .navigation_icon::before,
 .navigation_icon::after {
