--- a/style.css
+++ b/style.css
@@ -3,28 +3,180 @@
   padding: 0;
   box-sizing: border-box;
 }
-.navigation_checkbox {
+
+/* 
+@media screen and (min-width: 800px) {
+  .navigation_checkbox {
+    display: none;
+  }
+  
+  .navigation{
+    margin: 50px 25px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .navigation_background,.navigation_button{
+    display: none;
+  }
+  .navigation_list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    list-style: none;
+  }
+}
+
+
+
+@media screen and (max-width: 800px) {
+  .navigation_checkbox,.logo,.login-btn {
+    display: none;
+  }
+  .navigation_button {
+    background-color: #fff;
+    height: 5rem;
+    width: 5rem;
+    position: fixed;
+    top: 7rem;
+    right: 7rem;
+    border-radius: 50%;
+    z-index: 2000;
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  }
+  .navigation_background {
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    position: fixed;
+    top: 7rem;
+    right: 7rem;
+    background-image: radial-gradient(#00b0ff, #ccefff);
+    z-index: 1000;
+    transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+    cursor: pointer;
+  }
+  .navigation_nav {
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1500;
+    opacity: 0;
+    width: 0;
+    transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  .navigation_list {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    list-style: none;
+    text-align: center;
+    width: 100%;
+  }
+  .navigation_item {
+    margin: 1rem;
+  }
+  .navigation_link,
+  .navigation_link:link,
+  .navigation_link:visited {
+    font-size: 3rem;
+    font-weight: 300;
+    padding: 1rem 2rem;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-image: linear-gradient(
+      120deg,
+      transparent 0%,
+      transparent 50%,
+      #fff 50%
+    );
+    background-size: 224%;
+    transition: all 0.4s;
+    display: inline-block;
+  }
+  .navigation_link:hover,
+  .navigation_link:active {
+    background-position: 100%;
+    color: #55c57a;
+    transform: translateX(1rem);
+  }
+  .navigation_checkbox:checked ~ .navigation_background {
+    transform: scale(80);
+  }
+  .navigation_checkbox:checked ~ .navigation_nav {
+    opacity: 1;
+    width: 100%;
+  }
+  .navigation_icon,
+  .navigation_icon::before,
+  .navigation_icon::after {
+    width: 2.5rem;
+    height: 2px;
+    background-color: #333;
+    position: absolute;
+    display: inline-block;
+    left: 19px;
+    top: 40px;
+  }
+  .navigation_icon::before,
+  .navigation_icon::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    transition: all 0.2s;
+  }
+  .navigation_icon::before {
+    top: -0.8rem;
+  }
+  .navigation_icon::after {
+    top: 0.8rem;
+  }
+  .navigation_button:hover .navigation_icon::before {
+    top: -1rem;
+  }
+  .navigation_button:hover .navigation_icon::after {
+    top: 1rem;
+  }
+  .navigation_checkbox:checked + .navigation_button .navigation_icon {
+    background-color: transparent;
+  }
+  .navigation_checkbox:checked + .navigation_button .navigation_icon::before {
+    top: 0;
+    transform: rotate(135deg);
+  }
+  .navigation_checkbox:checked + .navigation_button .navigation_icon::after {
+    top: 0;
+    transform: rotate(-135deg);
+  }
+  
+} */
+
+
+.navigation_checkbox,.logo,.login-btn {
   display: none;
 }
 .navigation_button {
   background-color: #fff;
-  height: 7rem;
-  width: 7rem;
+  height: 5rem;
+  width: 5rem;
   position: fixed;
-  top: 6rem;
-  right: 6rem;
+  top: 7rem;
+  right: 7rem;
   border-radius: 50%;
   z-index: 2000;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
 }
 .navigation_background {
-  height: 6rem;
-  width: 6rem;
+  height: 5rem;
+  width: 5rem;
   border-radius: 50%;
   position: fixed;
-  top: 6.5rem;
-  right: 6.5rem;
-  background-image: radial-gradient(#7ed56f, #28b485);
+  top: 7rem;
+  right: 7rem;
+  background-image: radial-gradient(#00b0ff, #ccefff);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   cursor: pointer;
@@ -73,7 +225,7 @@
 .navigation_link:hover,
 .navigation_link:active {
   background-position: 100%;
-  color: #55c57a;
+  color: #00b0ff;
   transform: translateX(1rem);
 }
 .navigation_checkbox:checked ~ .navigation_background {
@@ -86,13 +238,13 @@
 .navigation_icon,
 .navigation_icon::before,
 .navigation_icon::after {
-  width: 3rem;
+  width: 2.5rem;
   height: 2px;
   background-color: #333;
   position: absolute;
   display: inline-block;
-  left: 30px;
-  top: 55px;
+  left: 19px;
+  top: 40px;
 }
 .navigation_icon::before,
 .navigation_icon::after {
@@ -124,34 +276,5 @@
   top: 0;
   transform: rotate(-135deg);
 }
-/* .navigation_icon,
-.navigation_icon::before,
-.navigation_icon::after{
-    width: 3rem;
-    height: 2px;
-    background-color: #333;
-    display: inline-block;
-}
-.navigation_icon{
-    position: relative;
-    margin-top: 3.5rem;
-}
-.navigation_icon::before,
-.navigation_icon::after{
-    content: "";
-    position: absolute;
-    left: 30px;
-    transition: all .2s;
-}
-.navigation_icon::before{
-    top: -.8rem;
-}
-.navigation_icon::after{
-    top: .8rem;
-}
-.navigation_button:hover .navigation_icon::before{
-    top: -1rem;
-}
-.navigation_button:hover .navigation_icon::after{
-    top: 1rem;
-} */
+
+
